# pmi-k8s

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  hello.c
.claude/: settings.local.json
.github/workflows/: lint.yml  publish.yml
src/: async_fence.rs  async_modex.rs  fence.rs  kv_store.rs  lib.rs  main.rs  modex.rs  peer.rs
src/coordinator/: fence.rs  mod.rs  protocol.rs
src/k8s/: env.rs  mod.rs  pods.rs
src/peer/: dir.rs  k8s.rs  mod.rs
src/pmix/: bindings.rs  client.rs  env.rs  globals.rs  info.rs  mod.rs  server.rs  sys.rs  value.rs
tests/: Dockerfile  client.rs  cluster.yaml  job.yaml  k8s.rs  mpi.rs  pmix.rs  test.py
tests/kustomization/base/: job.yaml  kustomization.yaml  rbac.yaml
tests/kustomization/dmodex/: job.yaml  kustomization.yaml
