[package]
name = "pmi-k8s"
version = "0.1.0"
edition = "2024"
default-run = "pmi-k8s"

[[bin]]
name = "mock"
required-features = ["test-bins"]

[dependencies]
tempdir = { version = "0.3.7" }
kube = { version = "3", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27", features = ["v1_35"] }
tokio = { version = "1", features = ["rt", "macros", "io-util"] }
thiserror = "2"
anyhow = "1"
libc = "0.2.180"
nix = { version = "0.31.0", features = ["user"] }
mpi = { version = "0.8.1", optional = true }
clap = { version = "4.5.57", features = ["derive"] }
notify = { version = "8.2.0", optional = true }
futures = "0.3.31"

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"

[dev-dependencies]
serial_test = "3.3.1"

[features]
test-bins = ["dep:mpi", "dep:notify"]
