[package]
name = "pmi-k8s"
version = "0.1.0"
edition = "2024"
default-run = "pmi-k8s"

[[bin]]
name = "mock"
required-features = ["test-bins"]

[dependencies]
futures = "0.3.31"
tokio = { version = "1", features = ["rt", "macros", "io-util"] }
kube = { version = "3", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27", features = ["v1_35"] }
thiserror = "2"
libc = "0.2.180"
nix = { version = "0.31.0", features = ["user"] }
tempdir = { version = "0.3.7" }
# Entry-point dependencies
clap = { version = "4.5.57", features = ["derive"] }
anyhow = "1"
# Test dependencies
mpi = { version = "0.8.1", optional = true }
notify = { version = "8.2.0", optional = true }

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"

[dev-dependencies]
serial_test = "3.3.1"

[features]
test-bins = ["dep:mpi", "dep:notify"]

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
undocumented_unsafe_blocks = "warn"
# lib is for internal use only, so we don't care about stability
async_fn_in_trait = "allow"
